[gd_scene load_steps=8 format=4 uid="uid://ctujwdogp5im5"]

[ext_resource type="Script" path="res://scripts/time_platforming_minigame.gd" id="1_50355"]
[ext_resource type="TileSet" uid="uid://bhw4bxuqfh87o" path="res://assets/1bitplatformerpack/platforming_tileset.tres" id="2_roi00"]
[ext_resource type="PackedScene" uid="uid://cmuyixh24ptkc" path="res://scenes/platforming_goal.tscn" id="3_sslx1"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="4_3j4rc"]
[ext_resource type="FontFile" uid="uid://cm8dnumwsttrn" path="res://assets/fonts/Silkscreen/slkscr.ttf" id="5_x267a"]
[ext_resource type="PackedScene" uid="uid://bgwqpaqgk52bi" path="res://scenes/countdown_label.tscn" id="6_gtilg"]
[ext_resource type="PackedScene" uid="uid://daybuxnjj7tm5" path="res://scenes/luck_label.tscn" id="7_l54rh"]

[node name="TimePlatformingMinigame" type="Node2D"]
script = ExtResource("1_50355")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(104, -31)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADh/wsAAQAKAA0AAADh/wwAAQAKAA4AAADh/w0AAQAKAA8AAADi/wsAAQALAA0AAADj/wsAAQALAA0AAADk/wsAAQALAA0AAADl/wsAAQALAA0AAADm/wsAAQALAA0AAADo/wsAAQALAA0AAADp/wsAAQALAA0AAADq/wsAAQALAA0AAADr/wsAAQALAA0AAADs/wsAAQALAA0AAADt/wsAAQALAA0AAADu/wsAAQALAA0AAADv/wsAAQALAA0AAADw/wsAAQALAA0AAADx/wsAAQALAA0AAADy/wsAAQALAA0AAADz/wsAAQALAA0AAAD0/wsAAQALAA0AAAD1/wsAAQALAA0AAAD2/wsAAQALAA0AAAD3/wsAAQALAA0AAAD4/wsAAQALAA0AAAD5/wsAAQALAA0AAAD6/wsAAQALAA0AAAD7/wsAAQALAA0AAAD9/wsAAQALAA0AAAD+/wsAAQALAA0AAAD8/wsAAQALAA0AAAD//wsAAQALAA0AAAAAAAsAAQALAA0AAAABAAsAAQALAA0AAAACAAsAAQALAA0AAAADAAsAAQALAA0AAAAEAAsAAQAMAA0AAAAFAAsAAQASABIAAAAFAA0AAQASABIAAAAEAA0AAQAMAA8AAAADAA0AAQALAA8AAAACAA0AAQALAA8AAAABAA0AAQALAA8AAAAAAA0AAQALAA8AAAD//w0AAQALAA8AAAD+/w0AAQALAA8AAAD9/w0AAQALAA8AAAD8/w0AAQALAA8AAAD7/w0AAQALAA8AAAD6/w0AAQALAA8AAAD5/w0AAQALAA8AAAD4/w0AAQALAA8AAAD3/w0AAQALAA8AAAD2/w0AAQALAA8AAAD1/w0AAQALAA8AAAD0/w0AAQALAA8AAADz/w0AAQALAA8AAADy/w0AAQALAA8AAADx/w0AAQALAA8AAADw/w0AAQALAA8AAADv/w0AAQALAA8AAADu/w0AAQALAA8AAADt/w0AAQALAA8AAADs/w0AAQALAA8AAADr/w0AAQALAA8AAADq/w0AAQALAA8AAADo/w0AAQALAA8AAADm/w0AAQALAA8AAADl/w0AAQALAA8AAADk/w0AAQALAA8AAADj/w0AAQALAA8AAADi/w0AAQALAA8AAAAFAAwAAQASABIAAAAEAAwAAQAMAA4AAAADAAwAAQASABIAAAACAAwAAQASABIAAAABAAwAAQASABIAAAAAAAwAAQASABIAAAD//wwAAQASABIAAAD+/wwAAQASABIAAAD9/wwAAQASABIAAAD8/wwAAQASABIAAAD7/wwAAQASABIAAAD6/wwAAQASABIAAAD5/wwAAQASABIAAAD4/wwAAQASABIAAAD3/wwAAQALAA4AAAD2/wwAAQALAA4AAAD1/wwAAQASABIAAAD0/wwAAQASABIAAADz/wwAAQASABIAAADy/wwAAQASABIAAADx/wwAAQASABIAAADw/wwAAQASABIAAADv/wwAAQASABIAAADu/wwAAQASABIAAADt/wwAAQALAA4AAADs/wwAAQASABIAAADr/wwAAQASABIAAADq/wwAAQASABIAAADp/wwAAQASABIAAADo/wwAAQASABIAAADn/wwAAQASABIAAADm/wwAAQASABIAAADi/wwAAQASABIAAADj/wwAAQALAA4AAADk/wwAAQASABIAAADl/wwAAQASABIAAADp/w0AAQALAA8AAADn/wsAAQALAA0AAADn/w0AAQALAA8AAADp/woAAQANAAsAAADp/wkAAQANAAoAAADp/wgAAQANAAkAAADh/wQAAQAKABAAAAACAAQAAQAMABAAAAABAAQAAQALABAAAAAAAAQAAQALABAAAAD//wQAAQALABAAAAD+/wQAAQALABAAAAD9/wQAAQALABAAAAD8/wQAAQALABAAAAD7/wQAAQALAA0AAAD6/wQAAQALABAAAAD5/wQAAQALABAAAAD4/wQAAQALABAAAAD3/wQAAQALABAAAAD2/wQAAQALABAAAAD1/wQAAQALABAAAAD0/wQAAQALABAAAADz/wQAAQALABAAAADy/wQAAQALABAAAADx/wQAAQALABAAAADw/wQAAQALABAAAADv/wQAAQALABAAAADu/wQAAQALAA0AAADt/wQAAQALABAAAADs/wQAAQALABAAAADr/wQAAQALABAAAADq/wQAAQALABAAAADp/wQAAQALABAAAADo/wQAAQALABAAAADn/wQAAQALABAAAADm/wQAAQALABAAAADl/wQAAQALABAAAADk/wQAAQALABAAAADj/wQAAQALABAAAADi/wQAAQALABAAAADk/woAAQANAAsAAADk/wkAAQANAAkAAADu/wUAAQANAAoAAADu/wYAAQANAAoAAADx/wgAAQALAAwAAADw/wgAAQALAAwAAAD1/wgAAQALAAkAAAD1/wkAAQANAAoAAAD1/woAAQANAAsAAADy/wgAAQAMAAwAAAD0/wgAAQAKAAwAAADu/wcAAQANAA4AAADu/wgAAQAKAAsAAADv/wgAAQALAAwAAAADAAcAAQAOAAMAAAADAAgAAQANABAAAAD2/wcAAQAKAAkAAAD3/wcAAQAMAAwAAAD5/wcAAQAKAAwAAAD6/wcAAQALAAwAAAD7/wUAAQANAAoAAAD7/wYAAQANAAoAAAD7/wcAAQAMAAsAAADh////AQAPAAoAAADh/wAAAQAPAAoAAADh/wEAAQAPAAoAAADh/wIAAQAPAAoAAADh/wMAAQAPAAsAAADi/wMAAQAQAAsAAADj/wMAAQAQAAsAAADk/wMAAQAQAAsAAADl/wMAAQAQAAsAAADm/wMAAQAQAAsAAADi//3/AQAQAAkAAADj//3/AQAQAAkAAADk//3/AQAQAAkAAADl//3/AQAQAAkAAADm//3/AQAQAAkAAADn//3/AQARAAkAAADh//3/AQAPAAkAAADn/wMAAQARAAsAAADh//7/AQAPAAoAAADk/wAAAQAAAAAAAADn//7/AQARAAoAAADn/wIAAQARAAoAAADm//7/AQAAAAAAAADl//7/AQAAAAAAAADk//7/AQAAAAAAAADj//7/AQAAAAAAAADi//7/AQAAAAAAAADi////AQAAAAAAAADi/wAAAQAAAAAAAADi/wEAAQAAAAAAAADj/wIAAQAAAAAAAADk/wIAAQAAAAAAAADl/wIAAQAAAAAAAADm/wIAAQAAAAAAAADm/wEAAQAAAAAAAADm/wAAAQAAAAAAAADm////AQAAAAAAAADn////AQAAAAAAAADn/wAAAQAAAAAAAADn/wEAAQAAAAAAAADl////AQAAAAAAAADl/wAAAQAAAAAAAADl/wEAAQAAAAAAAADk/wEAAQAAAAAAAADj/wEAAQAAAAAAAADj////AQAAAAAAAADk////AQAAAAAAAADh//n/AQAAAAAAAADh//r/AQAAAAAAAADh//v/AQAAAAAAAADh//z/AQAAAAAAAADi//z/AQAAAAAAAADj//z/AQAAAAAAAADj//v/AQAAAAAAAADj//r/AQAAAAAAAADj//n/AQAAAAAAAADi//n/AQAAAAAAAADi//r/AQAAAAAAAADi//v/AQAAAAAAAADk//n/AQAAAAAAAADk//r/AQAAAAAAAADk//v/AQAAAAAAAADk//z/AQAAAAAAAADl//z/AQAAAAAAAADm//z/AQAAAAAAAADm//v/AQAAAAAAAADm//r/AQAAAAAAAADm//n/AQAAAAAAAADl//n/AQAAAAAAAADl//r/AQAAAAAAAADl//v/AQAAAAAAAADn//n/AQAAAAAAAADn//r/AQAAAAAAAADn//v/AQAAAAAAAADo//n/AQAAAAAAAADo//r/AQAAAAAAAADo//v/AQAAAAAAAADo//z/AQAAAAAAAADn//z/AQAAAAAAAADo//3/AQAAAAAAAADo//7/AQAAAAAAAADo////AQAAAAAAAADo/wAAAQAAAAAAAADo/wEAAQAAAAAAAADo/wIAAQAAAAAAAADo/wMAAQAAAAAAAADp/wMAAQANAAAAAADq/wMAAQANAAIAAADr/wMAAQANAAAAAADs/wMAAQAAAAAAAADt/wMAAQAAAAAAAADu/wMAAQASAAEAAADv/wMAAQAQAAAAAADw/wMAAQARAAAAAADx/wMAAQAAAAAAAADy/wMAAQAAAAAAAADz/wMAAQARAAAAAAD0/wMAAQASAAEAAAD1/wMAAQAAAAAAAAD2/wMAAQARAAAAAAD3/wMAAQAAAAAAAAD4/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD6/wMAAQAAAAAAAAD7/wMAAQASAAEAAAD8/wMAAQAOAAEAAAD9/wMAAQASAAAAAAD+/wMAAQAAAAAAAAD//wMAAQARAAAAAAAAAAMAAQAQAAAAAAABAAMAAQAAAAAAAAACAAMAAQAAAAAAAADp//n/AQAAAAAAAADq//n/AQAAAAAAAADr//n/AQAAAAAAAADs//n/AQAAAAAAAADt//n/AQAAAAAAAADu//n/AQAAAAAAAADv//n/AQAAAAAAAADw//n/AQAAAAAAAADx//n/AQAAAAAAAADy//n/AQAAAAAAAADz//n/AQAAAAAAAAD0//n/AQAAAAAAAAD0//r/AQAAAAAAAAD1//r/AQAAAAAAAAD2//r/AQAAAAAAAAD3//r/AQAAAAAAAAD4//r/AQAAAAAAAAD4//n/AQAAAAAAAAD5//n/AQAAAAAAAAD6//n/AQAAAAAAAAD7//n/AQAAAAAAAAD8//n/AQAAAAAAAAD9//n/AQAAAAAAAAD+//n/AQAAAAAAAAD///n/AQAAAAAAAAAAAPn/AQAAAAAAAAABAPn/AQAAAAAAAAACAPn/AQAAAAAAAAADAPn/AQAAAAAAAAAEAPn/AQAAAAAAAAD3//n/AQAAAAAAAAD2//n/AQAAAAAAAAD1//n/AQAAAAAAAADg//n/AQASABIAAADg//r/AQASABIAAADg//v/AQASABIAAADg//z/AQASABIAAADg//3/AQASABIAAADg//7/AQASABIAAADg////AQASABIAAADg/wAAAQASABIAAADg/wEAAQASABIAAADg/wIAAQASABIAAADg/wMAAQASABIAAADg/wQAAQASABIAAADg/wUAAQASABIAAADg/wYAAQASABIAAADg/wcAAQASABIAAADg/wgAAQASABIAAADg/wkAAQASABIAAADg/woAAQASABIAAADg/wsAAQASABIAAADg/wwAAQASABIAAADg/w0AAQASABIAAADh/wUAAQAAAAAAAADi/wUAAQAAAAAAAADj/wUAAQAAAAAAAADk/wUAAQAAAAAAAADl/wUAAQAAAAAAAADm/wUAAQAAAAAAAADn/wUAAQAEAAAAAADo/wUAAQAAAAAAAADp/wUAAQAAAAAAAADr/wUAAQAAAAAAAADs/wUAAQAAAAAAAADt/wUAAQAAAAAAAADt/wYAAQAAAAAAAADs/wYAAQAAAAAAAADr/wYAAQAAAAAAAADp/wYAAQAAAAAAAADo/wYAAQAAAAAAAADn/wYAAQAEAAAAAADm/wYAAQAAAAAAAADl/wYAAQAAAAAAAADk/wYAAQAAAAAAAADj/wYAAQAAAAAAAADi/wYAAQAAAAAAAADh/wYAAQAAAAAAAADh/wcAAQAAAAAAAADh/wgAAQAAAAAAAADh/wkAAQAAAAAAAADi/wkAAQAAAAAAAADi/woAAQAAAAAAAADj/wkAAQAAAAAAAADj/wgAAQAAAAAAAADj/wcAAQAAAAAAAADi/wcAAQAAAAAAAADi/wgAAQAAAAAAAADh/woAAQAAAAAAAADj/woAAQASAAEAAADk/wcAAQAAAAAAAADk/wgAAQAAAAAAAADl/wcAAQAAAAAAAADl/wgAAQAAAAAAAADl/wkAAQAAAAAAAADl/woAAQASAAEAAADm/woAAQASAAAAAADn/woAAQAAAAAAAADo/woAAQAAAAAAAADo/wkAAQAAAAAAAADo/wgAAQAAAAAAAADo/wcAAQAAAAAAAADn/wcAAQAGAAAAAADm/wcAAQAAAAAAAADm/wgAAQAAAAAAAADm/wkAAQAAAAAAAADn/wkAAQAAAAAAAADn/wgAAQAAAAAAAADp/wcAAQAAAAAAAADq/wcAAQAAAAAAAADq/wgAAQAAAAAAAADq/wkAAQAAAAAAAADq/woAAQAAAAAAAADr/woAAQAAAAAAAADs/woAAQAOAAIAAADt/woAAQAAAAAAAADt/wkAAQAAAAAAAADt/wgAAQAAAAAAAADt/wcAAQAAAAAAAADs/wcAAQAAAAAAAADs/wgAAQAAAAAAAADr/wgAAQAAAAAAAADr/wkAAQAAAAAAAADs/wkAAQAAAAAAAADr/wcAAQAAAAAAAADu/wkAAQAAAAAAAADu/woAAQAAAAAAAADv/woAAQAAAAAAAADv/wkAAQAAAAAAAADw/wkAAQAAAAAAAADx/wkAAQATAAAAAADy/wkAAQAAAAAAAADz/wkAAQAAAAAAAAD0/wkAAQAAAAAAAAD0/woAAQAAAAAAAADz/woAAQAAAAAAAADy/woAAQAAAAAAAADx/woAAQATAAEAAADw/woAAQAAAAAAAADz/wgAAQAAAAAAAADz/wcAAQAAAAAAAADy/wcAAQAAAAAAAADx/wcAAQAAAAAAAADw/wcAAQAAAAAAAADw/wYAAQAFABEAAADv/wYAAQAAAAAAAADv/wUAAQAAAAAAAADv/wcAAQAAAAAAAADw/wUAAQAFABAAAADx/wUAAQAAAAAAAADy/wUAAQAAAAAAAADz/wUAAQAAAAAAAAD0/wUAAQAAAAAAAAD1/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD3/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD6/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD4/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD2/wYAAQAAAAAAAAD1/wYAAQAAAAAAAAD0/wYAAQAAAAAAAADz/wYAAQAAAAAAAADy/wYAAQAAAAAAAADx/wYAAQAAAAAAAAD0/wcAAQAAAAAAAAD1/wcAAQAAAAAAAAD4/wcAAQAAAAAAAAD4/wgAAQAAAAAAAAD3/wgAAQAAAAAAAAD2/wgAAQAMAAsAAAD2/wkAAQAAAAAAAAD2/woAAQAAAAAAAAD3/woAAQASAAAAAAD4/woAAQASAAEAAAD5/woAAQASAAEAAAD6/woAAQAQAAEAAAD7/woAAQAAAAAAAAD8/woAAQAAAAAAAAD9/woAAQAAAAAAAAD+/woAAQARAAEAAAD5/wgAAQAAAAAAAAD5/wkAAQAAAAAAAAD4/wkAAQAAAAAAAAD3/wkAAQAAAAAAAAD6/wkAAQAAAAAAAAD7/wkAAQAAAAAAAAD7/wgAAQAAAAAAAAD6/wgAAQAAAAAAAAD8/wkAAQAAAAAAAAD8/wgAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wYAAQATAAEAAAD9/wUAAQATAAAAAAD+/wUAAQAAAAAAAAD//wUAAQAAAAAAAAAAAAUAAQATAAAAAAABAAUAAQAAAAAAAAACAAUAAQAAAAAAAAD8/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAAD9/wgAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wkAAQAAAAAAAAD+/wkAAQAAAAAAAAD//woAAQARAAEAAAD//wkAAQAAAAAAAAD//wgAAQAAAAAAAAAAAAcAAQATAAAAAAAAAAYAAQATAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAAAAAgAAQATAAEAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAABAAoAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAACAAgAAQAAAAAAAAACAAcAAQAAAAAAAAACAAYAAQAAAAAAAAACAAoAAQAAAAAAAAADAAoAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAADAAQAAQAAAAAAAAADAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAPr/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPz/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAPn/AQASABIAAAAFAPr/AQASABIAAAAFAPv/AQASABIAAAAFAPz/AQASABIAAAAFAP3/AQASABIAAAAFAP7/AQASABIAAAAFAP//AQASABIAAAAFAAAAAQASABIAAAAFAAEAAQASABIAAAAFAAIAAQASABIAAAAFAAMAAQASABIAAAAFAAQAAQASABIAAAAFAAUAAQASABIAAAAFAAYAAQASABIAAAAFAAcAAQASABIAAAAFAAgAAQASABIAAAAFAAkAAQASABIAAAAFAAoAAQASABIAAAADAAIAAQAAAAAAAAACAAIAAQAAAAAAAAABAAIAAQAAAAAAAAAAAAIAAQAAAAAAAAD//wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD8/wIAAQAOAAAAAAD7/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD5/wIAAQAAAAAAAAD4/wIAAQAAAAAAAAD3/wIAAQAAAAAAAAD2/wIAAQAAAAAAAAD1/wIAAQAAAAAAAAD0/wIAAQAAAAAAAADz/wIAAQAAAAAAAADy/wIAAQAAAAAAAADx/wIAAQAAAAAAAADw/wIAAQAAAAAAAADv/wIAAQAAAAAAAADu/wIAAQAAAAAAAADt/wIAAQAAAAAAAADs/wIAAQAAAAAAAADr/wIAAQAAAAAAAADq/wIAAQAAAAAAAADp/wIAAQAAAAAAAADp/wEAAQAAAAAAAADp/wAAAQAAAAAAAADp////AQAAAAAAAADp//7/AQAAAAAAAADp//3/AQAAAAAAAADp//z/AQAAAAAAAADp//v/AQAAAAAAAADp//r/AQAAAAAAAADq//r/AQAAAAAAAADr//r/AQAAAAAAAADs//r/AQAAAAAAAADt//r/AQAAAAAAAADu//r/AQAAAAAAAADv//r/AQAAAAAAAADw//r/AQAAAAAAAADx//r/AQAAAAAAAADy//r/AQAAAAAAAADz//r/AQAAAAAAAAD5//r/AQAAAAAAAAD6//r/AQAAAAAAAAD7//r/AQAAAAAAAAD8//r/AQAAAAAAAAD9//r/AQAAAAAAAAD+//r/AQAAAAAAAAD///r/AQAAAAAAAAAAAPr/AQAAAAAAAAABAPr/AQAAAAAAAAACAPr/AQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAADAPz/AQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAACAAEAAQAAAAAAAAABAAEAAQAAAAAAAAAAAAEAAQAAAAAAAAD//wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD2/wEAAQAAAAAAAAD1/wEAAQAAAAAAAAD0/wEAAQAAAAAAAADz/wEAAQAAAAAAAADy/wEAAQAAAAAAAADx/wEAAQAAAAAAAADw/wEAAQAAAAAAAADv/wEAAQAAAAAAAADu/wEAAQAAAAAAAADt/wEAAQAAAAAAAADs/wEAAQAAAAAAAADr/wEAAQAAAAAAAADq/wEAAQAAAAAAAADq/wAAAQAAAAAAAADq////AQAAAAAAAADq//7/AQAAAAAAAADq//3/AQAAAAAAAADr//z/AQAAAAAAAADr//v/AQAAAAAAAADq//v/AQAAAAAAAADq//z/AQAAAAAAAADs//v/AQAAAAAAAADt//v/AQAAAAAAAADu//v/AQAAAAAAAADv//v/AQAAAAAAAADw//v/AQAAAAAAAADx//v/AQAAAAAAAADy//v/AQAAAAAAAADz//v/AQAAAAAAAAD0//v/AQAAAAAAAAD1//v/AQAAAAAAAAD2//v/AQAAAAAAAAD3//v/AQAAAAAAAAD4//v/AQAAAAAAAAD5//v/AQAAAAAAAAD6//v/AQAAAAAAAAD7//v/AQAAAAAAAAD8//v/AQAAAAAAAAD9//v/AQAAAAAAAAD+//v/AQAAAAAAAAD///v/AQAAAAAAAAAAAPv/AQAAAAAAAAABAPv/AQAAAAAAAAACAPv/AQAAAAAAAAACAPz/AQAAAAAAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAP//AQAAAAAAAAACAAAAAQAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAQAAAAAAAAD//wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD2/wAAAQAAAAAAAAD1/wAAAQAAAAAAAAD0/wAAAQAAAAAAAADz/wAAAQAAAAAAAADy/wAAAQAAAAAAAADx/wAAAQAAAAAAAADw/wAAAQAAAAAAAADv/wAAAQAAAAAAAADu/wAAAQAAAAAAAADt/wAAAQAAAAAAAADs/wAAAQAAAAAAAADr/wAAAQAAAAAAAADr////AQAAAAAAAADr//7/AQAAAAAAAADr//3/AQAAAAAAAADs//z/AQAAAAAAAADs//3/AQAAAAAAAADs//7/AQAAAAAAAADs////AQAAAAAAAADt//z/AQAAAAAAAADu//z/AQAAAAAAAADv//z/AQAAAAAAAADw//z/AQAAAAAAAADx//z/AQAAAAAAAADy//z/AQAAAAAAAADz//z/AQAAAAAAAAD0//z/AQAAAAAAAAD1//z/AQAAAAAAAAD2//z/AQAAAAAAAAD3//z/AQAAAAAAAAD4//z/AQAAAAAAAAD5//z/AQAAAAAAAAD6//z/AQAAAAAAAAD7//z/AQAAAAAAAAD8//z/AQAAAAAAAAD9//z/AQAAAAAAAAD+//z/AQAAAAAAAAD///z/AQAAAAAAAAAAAPz/AQAAAAAAAAABAPz/AQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD+////AQAAAAAAAAD9////AQAAAAAAAAD8////AQAAAAAAAAD7////AQAAAAAAAAD6////AQAAAAAAAAD5////AQAAAAAAAAD4////AQAAAAAAAAD3////AQAAAAAAAAD2////AQAAAAAAAAD1////AQAAAAAAAAD0////AQAAAAAAAADz////AQAAAAAAAADy////AQAAAAAAAADx////AQAAAAAAAADw////AQAAAAAAAADv////AQAAAAAAAADu////AQAAAAAAAADt////AQAAAAAAAADt//7/AQAAAAAAAADt//3/AQAAAAAAAADu//3/AQAAAAAAAADv//3/AQAAAAAAAADw//3/AQAAAAAAAADx//3/AQAAAAAAAADy//3/AQAAAAAAAADz//3/AQAAAAAAAAD0//3/AQAAAAAAAAD1//3/AQAAAAAAAAD2//3/AQAAAAAAAAD3//3/AQAAAAAAAAD4//3/AQAAAAAAAAD5//3/AQAAAAAAAAD6//3/AQAAAAAAAAD7//3/AQAAAAAAAAD8//3/AQAAAAAAAAD9//3/AQAAAAAAAAD+//3/AQAAAAAAAAD///3/AQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAD///7/AQAAAAAAAAD+//7/AQAAAAAAAAD9//7/AQAAAAAAAAD8//7/AQAAAAAAAAD7//7/AQAAAAAAAAD6//7/AQAAAAAAAAD5//7/AQAAAAAAAAD4//7/AQAAAAAAAAD3//7/AQAAAAAAAAD2//7/AQAAAAAAAAD1//7/AQAAAAAAAAD0//7/AQAAAAAAAADz//7/AQAAAAAAAADy//7/AQAAAAAAAADu//7/AQAAAAAAAADx//7/AQAAAAAAAADw//7/AQAAAAAAAADv//7/AQAAAAAAAADi/wIAAQAAAAAAAADq/wYAAQAAAAAAAADq/wUAAQAAAAAAAADj/wAAAQAAAAAAAAAFAA4AAQASABIAAAAEAA4AAQAAAAAAAAADAA4AAQAAAAAAAAACAA4AAQAAAAAAAAABAA4AAQAAAAAAAAAAAA4AAQAAAAAAAAD//w4AAQAAAAAAAAD+/w4AAQAAAAAAAAD9/w4AAQAAAAAAAAD8/w4AAQAAAAAAAAD7/w4AAQAAAAAAAAD6/w4AAQAAAAAAAAD5/w4AAQAAAAAAAAD4/w4AAQAAAAAAAAD3/w4AAQAAAAAAAAD2/w4AAQAAAAAAAAD1/w4AAQAAAAAAAAD0/w4AAQAAAAAAAADz/w4AAQAAAAAAAADy/w4AAQAAAAAAAADx/w4AAQAAAAAAAADw/w4AAQAAAAAAAADv/w4AAQAAAAAAAADu/w4AAQAAAAAAAADt/w4AAQAAAAAAAADs/w4AAQAAAAAAAADr/w4AAQAAAAAAAADq/w4AAQAAAAAAAADp/w4AAQAAAAAAAADo/w4AAQAAAAAAAADn/w4AAQAAAAAAAADm/w4AAQAAAAAAAADl/w4AAQAAAAAAAADk/w4AAQAAAAAAAADj/w4AAQAAAAAAAADi/w4AAQAAAAAAAADh/w4AAQAAAAAAAADg/w4AAQASABIAAAA=")
tile_set = ExtResource("2_roi00")

[node name="PlatformingGoal" parent="." instance=ExtResource("3_sslx1")]
position = Vector2(-116, -27)
scale = Vector2(0.5, 0.5)

[node name="Player" parent="." instance=ExtResource("4_3j4rc")]
position = Vector2(-136, 48)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="TimerLabel" type="Label" parent="Camera2D"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 98.0
offset_top = -75.0
offset_right = 138.0
offset_bottom = -52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_x267a")
theme_override_font_sizes/font_size = 8
text = "10.0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="GameTimer" type="Timer" parent="Camera2D/TimerLabel"]
unique_name_in_owner = true
one_shot = true

[node name="CountdownLabel" parent="Camera2D" instance=ExtResource("6_gtilg")]
unique_name_in_owner = true
offset_top = -32.5
offset_bottom = 32.5

[node name="LuckLabel" parent="Camera2D" instance=ExtResource("7_l54rh")]
unique_name_in_owner = true
visible = false

[node name="TransitionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true
